# SearchSystem

./: CMakeLists.txt  README.md  config.json  requests.json
include/: Constants.h  ConverterJSON.h  InvertedIndex.h  SearchServer.h  Utils.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  Utils.cpp  main.cpp
tests/: CMakeLists.txt  tests_InvertedIndex.cpp  tests_SearchServer.cpp
